# medrag

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  test_qdrant.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: 00_PROJECT_BIBLE.md  01_PRD.md  02_ARCHITECTURE.md  03_TECH_STACK.md  04_DEVELOPMENT_GUIDE.md  05_EVALUATION_PLAN.md  06_ROADMAP.md  12_API_SPECIFICATION.md  13_DATA_MODEL.md  14_PROMPT_STRATEGY.md
scripts/: start.sh
src/medrag/: main.py
src/medrag/api/: app.py  dependencies.py
src/medrag/api/routers/: __init__.py  documents.py  generation.py  health.py  search.py
src/medrag/api/schemas/: generation.py  health.py  search_request.py  search_response.py  upload_response.py
src/medrag/application/dto/: generation.py  ingestion_result.py
src/medrag/application/ports/: __init__.py  document_fingerprinter.py  document_parser.py  embedding_provider.py  fusion_strategy.py  indexing_service.py  llm_provider.py  prompt_builder.py  reranker.py  text_chunker.py
src/medrag/application/services/: composite_indexing_service.py  generation_service.py  hybrid_retrieval_service.py  ingestion_service.py  rag_service.py  retrieval_service.py
src/medrag/application/services/fusion/: __init__.py  rrf_fusion.py
src/medrag/domain/: exceptions.py
src/medrag/domain/entities/: chunk.py  document.py
src/medrag/domain/repositories/: dense_search_repository.py  document_repository.py  lexical_search_repository.py  search_repository.py
src/medrag/domain/value_objects/: __init__.py  document_fingerprint.py  retrieved_chunk.py  search_query.py
src/medrag/infrastructure/chunkers/: recursive_text_chunker.py
src/medrag/infrastructure/database/: __init__.py  models.py  session.py
src/medrag/infrastructure/embeddings/: bge_m3_provider.py
src/medrag/infrastructure/fingerprinting/: sha256_fingerprinter.py
src/medrag/infrastructure/llm/: provider.py
src/medrag/infrastructure/parsers/: pymupdf_parser.py
src/medrag/infrastructure/prompts/: default_prompt_builder.py  loader.py
src/medrag/infrastructure/prompts/templates/: system_prompt.txt
src/medrag/infrastructure/repositories/: in_memory_document_repository.py  qdrant_search_repository.py
src/medrag/infrastructure/reranking/: __init__.py  bge_reranker.py
src/medrag/infrastructure/retrieval/lexical/: bm25_index.py  bm25_search_repository.py  tokenizer.py
src/medrag/shared/config/: api.py  base.py  database.py  llm.py  logging.py  prompts.py  reranker.py  retrieval.py  settings.py  vector_db.py
src/medrag/shared/di/: __init__.py  containers.py
src/medrag/shared/logging/: __init__.py  formatter.py  logger.py  setup.py
tests/: test_health.py
tests/application/services/: test_bge_reranker.py  test_composite_indexing_service.py  test_generation_service.py  test_hybrid_retrieval_service.py
tests/application/services/fusion/: test_rrf_fusion.py
tests/infrastructure/llm/: test_litellm_provider.py
tests/infrastructure/prompts/: test_default_prompt_builder.py  test_loader.py
tests/infrastructure/retrieval/lexical/: test_bm25_index.py  test_bm25_search_repository.py  test_tokenizer.py
