[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "medrag"
version = "0.1.0"
description = "Production-grade Medical Retrieval-Augmented Generation System"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Swapnil" }
]

dependencies = [
    # -------------------------------------------------------------------------
    # Web Framework
    # -------------------------------------------------------------------------
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",

    # -------------------------------------------------------------------------
    # Configuration
    # -------------------------------------------------------------------------
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "python-dotenv>=1.1,<2.0",

    # -------------------------------------------------------------------------
    # Dependency Injection
    # -------------------------------------------------------------------------
    "dependency-injector>=4.48,<5.0",

    # -------------------------------------------------------------------------
    # LLM Framework
    # -------------------------------------------------------------------------
    "langchain>=0.3,<0.4",

    # -------------------------------------------------------------------------
    # Retrieval
    # -------------------------------------------------------------------------
    "qdrant-client>=1.15,<2.0",
    "rank-bm25>=0.2,<1.0",

    # -------------------------------------------------------------------------
    # Embeddings
    # -------------------------------------------------------------------------
    "sentence-transformers>=5.1,<6.0",
]

[dependency-groups]
dev = [
    # Formatting
    "black>=25.1,<26.0",

    # Linting
    "ruff>=0.12,<1.0",

    # Type Checking
    "mypy>=1.17,<2.0",

    # Testing
    "pytest>=8.4,<9.0",
    "pytest-cov>=6.2,<7.0",
    "pytest-asyncio>=1.1,<2.0",
    "httpx>=0.28,<1.0",

    # Git Hooks
    "pre-commit>=4.3,<5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
mypy_path = "src"

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

pretty = true
show_error_codes = true

namespace_packages = true

exclude = [
    "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/medrag"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90